--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "gulp-jshint": "^2.0.4",
         "gulp-less": "^3.3.0",
         "gulp-minify-css": "^1.2.4",
+        "gulp-postcss": "^8.0.0",
         "gulp-rename": "^1.2.2",
         "gulp-rev": "^7.1.2",
         "gulp-rev-collector": "^1.1.1",
@@ -36,6 +37,7 @@
         "lodash.assign": "^4.2.0",
         "node-glob": "^1.2.0",
         "npm": "^4.0.5",
+        "postcss-px2rem": "^0.3.0",
         "through2": "^2.0.3",
         "vinyl-buffer": "^1.0.0",
         "vinyl-source-stream": "^1.1.0",
